# ecl-intern

./: .gitignore  README.md  manage.py  pyproject.toml  rawfile  rawsqlfile
eclIntern/: asgi.py  settings.py  urls.py  wsgi.py
eclapp/: admin.py  apps.py  models.py  schema.py
eclapp/migrations/: 0001_initial.py  0002_auto_20210227_2118.py
