[tool.poetry]
name = "ecl_intern_project"
version = "0.1.0"
description = "This is a project for internship"
authors = ["Nazibur Rahman"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
